--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,9 @@ android {
 
 dependencies {
 
-    def roomVersion = '2.4.2'
-    def lifecycleVersion = '2.5.0'
-    def coroutinesVersion = '1.5.0'
-    def nav_version = "2.5.0"
+    def roomVersion = '2.4.3'
+    def lifecycleVersion = '2.5.1'
+    def nav_version = "2.5.1"
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -99,6 +98,10 @@ dependencies {
 
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.5.1"
+
+    // Paging Compose
+    implementation "com.google.accompanist:accompanist-pager:0.13.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.13.0"
 
     // Room components
     implementation "androidx.room:room-ktx:$roomVersion"
